Log an error to stderr when FrameView::layout() fails to clean all the renderers. https://bugs.webkit.org/show_bug.cgi?id=162835

Reviewed by Simon Fraser.

We've come across multiple layout/painting bugs caused by renderers left dirty
after FrameView::layout(). This patch helps catching such issues early.
Once all the blocking bugs are fixed (webkit.org/b/162835), logging should be replaced with ASSERT().

Not testable.

* page/FrameView.cpp:
(WebCore::RenderTreeNeedsLayoutChecker::~RenderTreeNeedsLayoutChecker):
(WebCore::FrameView::layout):


Canonical link: https://commits.webkit.org/180801@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206743 268f45cc-cd09-0410-ab3c-d52691b4dbfc